--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     Who am I ?
                 </h3>
                 <hr>
-                <p>My name is Bhargav sai Dama. I found github pages interesting and creating one.
+                <p>My name is Bhargav sai Dama. I found github pages interesting.
                 As I am creating one, I thought might as well give my introduction also.
                 After doing my Electrical Engineering, I realised that I am not much excited about the field and decided to become an
                 software engineer (Thanks to Wipro).<br>
